@@ -1,3 +1,6 @@
+
+* Handle the passing of the child of the toolitem to the WidgetInvoker in ToolInvoker, FrameWidgetInvoker (erikos) 
+
 Snapshot b8ce5083b7
 
 * #3293 Fix that several palettes are not hooked up to the same button (erikos)
